--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@
     <link rel="icon" href="/recipe assistant logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Recipe Assistant</title>
+    <script type="module" crossorigin src="./index-DFUl_g1o.js"></script>
+    <link rel="stylesheet" crossorigin href="./index-C_82DlR6.css">
   </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
